<resources>
    <string name="app_name">Session</string>
    <string name="install_url" translatable="false">https://getsession.org/</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="ban">Ban</string>
    <string name="please_wait">Please wait...</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="version_s">Version %s</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus">\+%d</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Session and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Session messages and calls...</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Session messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Session messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Session your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s, Registration lock %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_quote_snippet">(reply)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Session requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Session requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Session requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Session requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="BucketedThreadMedia_This_week">This week</string>
    <string name="BucketedThreadMedia_This_month">This month</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="CameraActivity_image_save_failure">Failed to save image.</string>
    <string name="ClearProfileActivity_remove">Remove</string>
    <string name="ClearProfileActivity_remove_profile_photo">Remove profile photo?</string>
    <string name="CommunicationActions_no_browser_found">No web browser found.</string>
    <string name="CommunicationActions_a_cellular_call_is_already_in_progress">A cellular call is already in progress.</string>
    <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Your safety number with %1$s has changed. This could either mean that someone is trying to intercept your communication, or that %2$s simply reinstalled Session.</string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">You may wish to verify your safety number with this contact.</string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsCursorLoader_recent_chats">Recent chats</string>
    <string name="ContactsCursorLoader_contacts">Contacts</string>
    <string name="ContactsCursorLoader_groups">Groups</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_signal_call_s">Session Call %s</string>
    <string name="ContactNameEditActivity_given_name">Given name</string>
    <string name="ContactNameEditActivity_family_name">Family name</string>
    <string name="ContactNameEditActivity_prefix">Prefix</string>
    <string name="ContactNameEditActivity_suffix">Suffix</string>
    <string name="ContactNameEditActivity_middle_name">Middle name</string>
    <string name="ContactShareEditActivity_type_home">Home</string>
    <string name="ContactShareEditActivity_type_mobile">Mobile</string>
    <string name="ContactShareEditActivity_type_work">Work</string>
    <string name="ContactShareEditActivity_type_missing">Other</string>
    <string name="ContactShareEditActivity_invalid_contact">Selected contact was invalid</string>
    <string name="ConversationItem_error_not_delivered">Send failed, tap for details</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_click_to_approve_unencrypted">Send failed, tap for unsecured fallback</string>
    <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Fallback to unencrypted SMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Fallback to unencrypted MMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">This message will <b>not</b> be encrypted because the recipient is no longer a Session user.\n\nSend unsecured message?</string>
    <string name="ConversationItem_unable_to_open_media">Can\'t find an app able to open this media.</string>
    <string name="ConversationItem_copied_text">Copied %s</string>
    <string name="ConversationItem_from_s">from %s</string>
    <string name="ConversationItem_to_s">to %s</string>
    <string name="ConversationItem_read_more">&#160; Read More</string>
    <string name="ConversationItem_download_more">&#160; Download More</string>
    <string name="ConversationItem_pending">&#160; Pending</string>
    <string name="ConversationActivity_reset_secure_session_question">Reset secure session?</string>
    <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">This may help if you\'re having encryption problems in this conversation. Your messages will be kept.</string>
    <string name="ConversationActivity_reset">Reset</string>
    <string name="ConversationActivity_add_attachment">Add attachment</string>
    <string name="ConversationActivity_select_contact_info">Select contact info</string>
    <string name="ConversationActivity_compose_message">Compose message</string>
    <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">Sorry, there was an error setting your attachment.</string>
    <string name="preferences__led_color">LED color</string>
    <string name="preferences__sound">Sound</string>
    <string name="preferences__vibrate">Vibrate</string>
    <string name="preferences_notifications__show">Show</string>
    <string name="continue_2">Continue</string>
    <string name="activity_landing_title_2">Your Session begins here...</string>
    <string name="activity_landing_register_button_title">Create Session ID</string>
    <string name="activity_landing_restore_button_title">Continue Your Session</string>
    <string name="activity_restore_title">Restore your account</string>
    <string name="activity_restore_explanation">Enter the recovery phrase that was given to you when you signed up to restore your account.</string>
    <string name="activity_restore_seed_edit_text_hint">Enter your recovery phrase</string>
    <string name="activity_display_name_title_2">Pick your display name</string>
    <string name="activity_display_name_explanation">This will be your name when you use Session. It can be your real name, an alias, or anything else you like.</string>
    <string name="activity_display_name_edit_text_hint">Enter a display name</string>
    <string name="activity_notification_settings_style_section_title">Notification Style</string>
    <string name="activity_notification_settings_content_section_title">Notification Content</string>
    <string name="preferences_notifications_strategy_category_title">Notification Strategy</string>
</resources>