<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_spacing"
    android:orientation="vertical">

    <include layout="@layout/fill_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:text="@string/activity_display_name_title_2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/small_font_size"
        android:textColor="@color/text"
        android:text="@string/activity_display_name_explanation" />

    <EditText
        style="@style/SmallSessionEditText"
        android:id="@+id/displayNameEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:gravity="center_vertical"
        android:inputType="textCapWords"
        android:hint="@string/activity_display_name_edit_text_hint" />

    <include layout="@layout/fill_vertical"/>

    <Button
        style="@style/Widget.Session.Button.Common.ProminentFilled"
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginBottom="@dimen/small_spacing"
        android:text="@string/continue_2" />

    <include layout="@layout/fill_vertical"/>

</LinearLayout>