<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferences_notifications_strategy_category_title">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:key="pref_key_use_fcm"
            android:title="@string/preferences_notifications_strategy_category_fast_mode_title"
            android:summary="@string/preferences_notifications_strategy_category_fast_mode_summary"
            android:defaultValue="false" />

        <Preference android:layout="@layout/go_to_device_settings"
            android:key="pref_notification_priority" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/activity_notification_settings_style_section_title">

        <org.thoughtcrime.securesms.preferences.widgets.SignalPreference
            android:key="pref_key_ringtone"
            android:title="@string/preferences__sound"
            android:persistent="false"
            android:defaultValue="content://settings/system/notification_sound" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:key="pref_sound_when_app_open"
            android:defaultValue="false"
            android:title="@string/preferences__in_app_sounds"
            />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:key="pref_key_vibrate"
            android:defaultValue="true"
            android:title="@string/preferences__vibrate" />

        <org.thoughtcrime.securesms.preferences.widgets.LEDColorListPreference
            android:key="pref_led_color"
            android:defaultValue="blue"
            android:title="@string/preferences__led_color"
            android:entries="@array/pref_led_color_entries"
            android:entryValues="@array/pref_led_color_values" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/activity_notification_settings_content_section_title">

        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference
            android:key="pref_notification_privacy"
            android:title="@string/preferences_notifications__show"
            android:defaultValue="all"
            android:entries="@array/pref_notification_privacy_entries"
            android:entryValues="@array/pref_notification_privacy_values" />

    </PreferenceCategory>

    <!-- </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_notifications__calls">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
                android:key="pref_call_notifications"
                android:title="@string/preferences__notifications"
                android:defaultValue="true" />

        <org.thoughtcrime.securesms.preferences.widgets.SignalPreference
                android:dependency="pref_call_notifications"
                android:key="pref_call_ringtone"
                android:title="@string/preferences_notifications__ringtone"
                android:persistent="false"
                android:defaultValue="content://settings/system/ringtone" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
                android:dependency="pref_call_notifications"
                android:key="pref_call_vibrate"
                android:defaultValue="true"
                android:title="@string/preferences__vibrate"/>

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_notifications__events">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:key="pref_enable_new_contacts_notifications"
            android:title="@string/preferences_events__contact_joined_signal"
            android:defaultValue="true" />
    </PreferenceCategory> -->

</PreferenceScreen>