<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_spacing"
    android:orientation="vertical">

    <include layout="@layout/fill_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:text="@string/activity_restore_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/small_font_size"
        android:textColor="@color/text"
        android:text="@string/activity_restore_explanation" />

    <EditText
        style="@style/SmallSessionEditText"
        android:id="@+id/mnemonicEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:gravity="center_vertical"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:hint="@string/activity_restore_seed_edit_text_hint" />

    <include layout="@layout/fill_vertical"/>

    <Button
        style="@style/Widget.Session.Button.Common.ProminentFilled"
        android:id="@+id/restoreButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button_height"
        android:text="@string/continue_2" />

    <TextView
        android:layout_marginTop="@dimen/small_spacing"
        android:id="@+id/termsTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/onboarding_button_bottom_offset"
        android:gravity="center"
        android:textColorLink="@color/text"
        android:textSize="@dimen/very_small_font_size"
        android:textColor="@color/text"
        android:text="By using this service, you agree to our Terms of Service and Privacy Policy"
        tools:ignore="HardcodedText" /> <!-- Intentionally not yet translated -->

        <include layout="@layout/fill_vertical"/>
</LinearLayout>